--- a/Roglaza/Forms/FrmAdminPanel.resx
+++ b/Roglaza/Forms/FrmAdminPanel.resx
@@ -121,10 +121,13 @@
     <value>17, 17</value>
   </metadata>
   <metadata name="timerSession.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>145, 23</value>
+    <value>144, 17</value>
   </metadata>
   <metadata name="timer_porn_blocker.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>266, 23</value>
+    <value>265, 17</value>
+  </metadata>
+  <metadata name="timer_global.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>421, 17</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>61</value>
